speakers and judges section

--- a/index.html
+++ b/index.html
@@ -98,6 +98,74 @@
         <p>The hackathon is an opportunity to work alongside the developers, thought leaders, advisers, and companies who are making the infrastructure and applications that will power the future.</p>
       </div>
     </section>
+    <section class="valign-wrapper" id="spekears">
+      <div class="valign row">
+        <h2 class="speakers-title">SPEAKERS AND JUDGES</h2>
+        <div class="row">
+          <div class="speakers-box">
+            <img src="./images/speakers/evan_van_ness.jpg" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Evan Van Ness</p>
+            <p class="speakers-subtitle">Curator</br>Week in Ethereum</p>
+          </div>
+          <div class="speakers-box">
+            <img src="./images/speakers/Rhys_Lindmark.jpg" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Rhys Lindmark</p>
+            <p class="speakers-subtitle">Co-steward</br>ETHCommons</p>
+          </div>
+          <div class="speakers-box">
+            <img src="./images/speakers/liam_horne.png" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Liam Horne</p>
+            <p class="speakers-subtitle">Co-founder</br>L4 & ETHGlobal</p>
+          </div>
+          <div class="speakers-box">
+            <img src="./images/speakers/simon_de_la_rouviere.png" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Simon de la Rouviere</p>
+            <p class="speakers-subtitle">Engineer of Societies</br>Consensys</p>
+          </div>
+          <div class="speakers-box">
+            <img src="./images/speakers/esteban_ordano.jpeg" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Esteban Ordano</p>
+            <p class="speakers-subtitle">Tech Lead</br>Decentraland</p>
+          </div>
+          <div class="speakers-box">
+            <img src="./images/speakers/elena_nadolinski.png" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Elena Nadolinski</p>
+            <p class="speakers-subtitle">Software Engineer</br>Airbnb</p>
+          </div>
+          <div class="speakers-box">
+            <img src="./images/speakers/federico_bond.jpg" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Federico Bond</p>
+            <p class="speakers-subtitle">Co-founder & CTO</br>Signatura</p>
+          </div>
+          <div class="speakers-box">
+            <img src="./images/speakers/luis_cuende.jpg" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Luis Cuende</p>
+            <p class="speakers-subtitle">Project Lead</br>Aragon</p>
+
+          </div>
+          <div class="speakers-box">
+            <img src="./images/speakers/fabiano_pereira.jpeg" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Fabiano Pereira</p>
+            <p class="speakers-subtitle">Software Engineer</br>CryptoKitties - Axiom Zen</p>
+          </div>
+          <div class="speakers-box">
+            <img src="./images/speakers/sergio_lerner.png" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Sergio Lerner</p>
+            <p class="speakers-subtitle">Chief SCientist</br>RSK</p>
+          </div>
+          <div class="speakers-box">
+            <img src="./images/speakers/demian_brener.png" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Demian Brener</p>
+            <p class="speakers-subtitle">Co-founder & CEO</br>Zeppelin</p>
+          </div>
+          <div class="speakers-box">
+            <img src="./images/speakers/eric_meltzer.jpg" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Eric Meltzer</p>
+            <p class="speakers-subtitle">Partner</br>INBlockchain</p>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="valign-wrapper" id="sponsors">
       <div class="valign row">
         <h2>SPONSORS</h2>
