Add links to venue and hotel

--- a/index.html
+++ b/index.html
@@ -252,13 +252,13 @@
       <div class="col s12 l6 venue-box">
         <div class="box1">
           <h5 class="details">VENUE</h5>
-          <img src="./images/venue.JPG">
+          <a target="_blank" href="https://www.areatresworkplace.com/"><img src="./images/venue.JPG"></a>
           <h2>AREA 3</h2>
           <p>El Salvador 5218,</br>Buenos Aires, Argentina.</p>
         </div>
         <div class="box2">
           <h5 class="details">HOTEL</h5>
-          <img src="./images/hotel.jpg">
+          <a target="_blank" href="https://goo.gl/maps/mGqmjdBg7SA2"><img src="./images/hotel.jpg"></a>
           <h2>DAZZLER PALERMO</h2>
           <p>Humboldt 1650,</br>Buenos Aires, Argentina.</p>
         </div>
