linda xie in speakers section

--- a/index.html
+++ b/index.html
@@ -159,6 +159,11 @@
             <p class="speakers-subtitle">Co-founder & CEO</br>Zeppelin</p>
           </div>
           <div class="speakers-box">
+            <img src="./images/speakers/linda_xie.jpg" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Linda Xie</p>
+            <p class="speakers-subtitle">Co-founder & Managing Director</br>Scalar Capital</p>
+          </div>
+          <div class="speakers-box">
             <img src="./images/speakers/eric_meltzer.jpg" class="circle responsive-img speakers-img">
             <p class="speakers-text">Eric Meltzer</p>
             <p class="speakers-subtitle">Partner</br>INBlockchain</p>
