--- a/index.html
+++ b/index.html
@@ -214,6 +214,9 @@
           <a alt="ETHCommons" title="ETHCommons" id="sponsor-ethcommons">
             <img src="./images/sponsors/ETHCommons.png" />
           </a>
+          <a alt="Cripto Noticias" title="CriptoNoticias" id="sponsor-criptonoticias" target="_blank" href="https://www.criptonoticias.com">
+            <img src="./images/sponsors/Criptonoticias.png" />
+          </a>
 <!--            <a href="https://0xproject.com/" target="_blank" alt="0x" title="0x" id="sponsor-0x">
             <img src="./images/sponsors/0x.png" />
           </a>
