new partners section

--- a/index.html
+++ b/index.html
@@ -214,9 +214,6 @@
           <a alt="ETHCommons" title="ETHCommons" id="sponsor-ethcommons">
             <img src="./images/sponsors/ETHCommons.png" />
           </a>
-          <a alt="Cripto Noticias" title="CriptoNoticias" id="sponsor-criptonoticias" target="_blank" href="https://www.criptonoticias.com">
-            <img src="./images/sponsors/Criptonoticias.png" />
-          </a>
 <!--            <a href="https://0xproject.com/" target="_blank" alt="0x" title="0x" id="sponsor-0x">
             <img src="./images/sponsors/0x.png" />
           </a>
@@ -251,9 +248,16 @@
             <img src="./images/sponsors/Placeholder.png" />
           </a> -->
         </div>
+        
         <h3>ETHBuenosAires sponsorship deadline is April 30th.</h3>
         <p>Qualified sponsorships receive 5-15% credit for bounties & repos.</p>
         <a href="mailto:sponsors@ethbuenosaires.com"><button class="details">Become a sponsor</button></a>
+        <h2 class="partners-title">PARTNERS</h2>
+        <div class="row">
+          <a alt="Cripto Noticias" title="CriptoNoticias" id="sponsor-criptonoticias" target="_blank" href="https://www.criptonoticias.com">
+            <img src="./images/sponsors/Criptonoticias.png" />
+          </a>
+        </div>
       </div>
     </section>
     <section class="row" id="venue">
