--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         <h3>ETHBuenosAires sponsorship deadline is April 30th.</h3>
         <p>Qualified sponsorships receive 5-15% credit for bounties & repos.</p>
         <a href="mailto:sponsors@ethbuenosaires.com"><button class="details">Become a sponsor</button></a>
-        <h2 class="partners-title">PARTNERS</h2>
+        <h2 class="partners-title">MEDIA PARTNERS</h2>
         <div class="row">
           <a alt="Cripto Noticias" title="CriptoNoticias" id="sponsor-criptonoticias" target="_blank" href="https://www.criptonoticias.com">
             <img src="./images/sponsors/Criptonoticias.png" />
