new sponsors and speakers

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
           <a href="#" data-activates="mobile-nav" class="button-collapse"><i class="fa fa-bars" aria-hidden="true"></i></a>
           <ul class="right hide-on-med-and-down">
             <li><a class="menu-text" href="#about">ABOUT</a></li>
+            <li><a class="menu-text" href="#speakers">SPEAKERS AND JUDGES</a></li>
             <li><a class="menu-text" href="#sponsors">SPONSORS</a></li>
             <li><a class="menu-text" href="#venue">VENUE</a></li>
             <!-- <li><a class="menu-text" href="#faq">FAQ</a></li> -->
@@ -72,6 +73,7 @@
           <ul class="side-nav" id="mobile-nav">
             <li><a class="sidenav-close close-link" href="#!">X</a></li>
             <li class="valign-wrapper"><a class="menu-text sidenav-close" href="#about">ABOUT</a></li>
+            <li class="valign-wrapper"><a class="menu-text sidenav-close" href="#speakers">SPEAKERS AND JUDGES</a></li>
             <li class="valign-wrapper"><a class="menu-text sidenav-close" href="#sponsors">SPONSORS</a></li>
             <li class="valign-wrapper"><a class="menu-text sidenav-close" href="#venue">VENUE</a></li>
             <!-- <li class="valign-wrapper"><a class="menu-text sidenav-close" href="#faq">FAQ</a></li> -->
@@ -98,7 +100,7 @@
         <p>The hackathon is an opportunity to work alongside the developers, thought leaders, advisers, and companies who are making the infrastructure and applications that will power the future.</p>
       </div>
     </section>
-    <section class="valign-wrapper" id="spekers">
+    <section class="valign-wrapper" id="speakers">
       <div class="valign row">
         <h2 class="speakers-title">SPEAKERS AND JUDGES</h2>
         <div class="row">
@@ -168,6 +170,16 @@
             <p class="speakers-text">Eric Meltzer</p>
             <p class="speakers-subtitle">Partner</br>INBlockchain</p>
           </div>
+          <div class="speakers-box">
+            <img src="./images/speakers/Andy_Tudhope.png" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Andy Tudhope</p>
+            <p class="speakers-subtitle">Technical Evangelist</br>Status</p>
+          </div>
+          <div class="speakers-box">
+            <img src="./images/speakers/Wendy_Xiao_Schadeck.png" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Wendy Xiao Schadeck</p>
+            <p class="speakers-subtitle">VC</br>Northzone</p>
+          </div>
         </div>
       </div>
     </section>
@@ -213,6 +225,9 @@
           </a>
           <a alt="ETHCommons" title="ETHCommons" id="sponsor-ethcommons">
             <img src="./images/sponsors/ETHCommons.png" />
+          </a>
+          <a alt="Ripio" title="Ripio" id="sponsor-ripio">
+            <img src="./images/sponsors/ripio.png" />
           </a>
 <!--            <a href="https://0xproject.com/" target="_blank" alt="0x" title="0x" id="sponsor-0x">
             <img src="./images/sponsors/0x.png" />
