new sponsors and speakers

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <p>The hackathon is an opportunity to work alongside the developers, thought leaders, advisers, and companies who are making the infrastructure and applications that will power the future.</p>
       </div>
     </section>
-    <section class="valign-wrapper" id="speakers">
+    <section class="valign-wrapper" id="speakers-and-judges">
       <div class="valign row">
         <h2 class="speakers-title">SPEAKERS AND JUDGES</h2>
         <div class="row">
