adding link to ripio

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
           <a alt="ETHCommons" title="ETHCommons" id="sponsor-ethcommons">
             <img src="./images/sponsors/ETHCommons.png" />
           </a>
-          <a alt="Ripio" title="Ripio" id="sponsor-ripio">
+          <a href="https://www.ripio.com/" target="_blank" alt="Ripio" title="Ripio" id="sponsor-ripio">
             <img src="./images/sponsors/ripio.png" />
           </a>
 <!--            <a href="https://0xproject.com/" target="_blank" alt="0x" title="0x" id="sponsor-0x">
