removing level k from sponsor

--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@
           <a href="https://www.xivis.com/" target="_blank" alt="Xivis" title="Xivis" id="sponsor-xivis">
             <img src="./images/sponsors/Xivis.svg" />
           </a>
-          <a href="https://www.levelk.io/" target="_blank" alt="LevelK" title="LevelK" id="sponsor-levelk">
+          <!-- <a href="https://www.levelk.io/" target="_blank" alt="LevelK" title="LevelK" id="sponsor-levelk">
             <img src="./images/sponsors/Levelk.png" />
-          </a>
+          </a> -->
           <a href="https://lendroid.com" target="_blank" alt="lendroid" title="lendroid" id="sponsor-lendroid">
             <img src="./images/sponsors/lendroid.svg" />
           </a>
