--- a/index.html
+++ b/index.html
@@ -185,6 +185,16 @@
             <p class="speakers-text">Pete Kim</p>
             <p class="speakers-subtitle">Head of Engineering</br>Toshi</p>
           </div>
+          <div class="speakers-box">
+            <img src="./images/speakers/ameen_soleimani.jpeg" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Ameen Soleimani</p>
+            <p class="speakers-subtitle">Co-founder & CEO</br>SpankChain</p>
+          </div>
+          <div class="speakers-box">
+            <img src="./images/speakers/lane_rettig.jpeg" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Lane Rettig</p>
+            <p class="speakers-subtitle">Ethereum Foundation</br></p>
+          </div>
         </div>
       </div>
     </section>
