--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <div class="speakers-box">
             <img src="./images/speakers/sergio_lerner.png" class="circle responsive-img speakers-img">
             <p class="speakers-text">Sergio Lerner</p>
-            <p class="speakers-subtitle">Chief SCientist</br>RSK</p>
+            <p class="speakers-subtitle">Chief Scientist</br>RSK</p>
           </div>
           <div class="speakers-box">
             <img src="./images/speakers/demian_brener.png" class="circle responsive-img speakers-img">
