hiding consentys logo

--- a/index.html
+++ b/index.html
@@ -244,20 +244,19 @@
           <a href="https://www.ripio.com/" target="_blank" alt="Ripio" title="Ripio" id="sponsor-ripio">
             <img src="./images/sponsors/ripio.png" />
           </a>
-          <a href="https://new.consensys.net/" target="_blank" alt="Consensys" title="Consensys" id="sponsor-consensys">
-            <img src="./images/sponsors/Consensys.png" />
-          </a>
           <a href="https://www.xivis.com/" target="_blank" alt="Xivis" title="Xivis" id="sponsor-xivis">
             <img src="./images/sponsors/Xivis.svg" />
           </a>
-          <!-- <a href="https://www.levelk.io/" target="_blank" alt="LevelK" title="LevelK" id="sponsor-levelk">
-            <img src="./images/sponsors/Levelk.png" />
-          </a> -->
           <a href="https://lendroid.com" target="_blank" alt="lendroid" title="lendroid" id="sponsor-lendroid">
             <img src="./images/sponsors/lendroid.svg" />
           </a>
-          
-<!--            <a href="https://0xproject.com/" target="_blank" alt="0x" title="0x" id="sponsor-0x">
+          <!-- <a href="https://new.consensys.net/" target="_blank" alt="Consensys" title="Consensys" id="sponsor-consensys">
+            <img src="./images/sponsors/Consensys.png" />
+          </a> -->
+          <!-- <a href="https://www.levelk.io/" target="_blank" alt="LevelK" title="LevelK" id="sponsor-levelk">
+            <img src="./images/sponsors/Levelk.png" />
+          </a> -->
+          <!-- <a href="https://0xproject.com/" target="_blank" alt="0x" title="0x" id="sponsor-0x">
             <img src="./images/sponsors/0x.png" />
           </a>
           
