--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
             <img class="hide-on-med-and-up" src="./images/logo-mobile.svg"/> 
             <h5 class="valign">Part of the ETHGlobal community & first event in Latin America</h5>
             <h4>May 25 - 27, 2018 // Buenos Aires, Argentina</h4>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLScAqWVEPfK79NL9aHLowTZAxlGrZp-atPMK3EYtWGQRcwQ8xA/viewform?usp=sf_link" target="_blank"><button class="details">REGISTER</button></a>
+            <h4>Talks will be livestreamed and recorded – check back soon!</h4>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScAqWVEPfK79NL9aHLowTZAxlGrZp-atPMK3EYtWGQRcwQ8xA/viewform?usp=sf_link" target="_blank"><button class="details">JOIN THE WAITLIST</button></a>
             <p>or <a class="text-link" href="https://docs.google.com/forms/d/e/1FAIpQLSctgZDAWs3iRHwuKO82KSvslnz7wkkYltSnnZ9ty54QoVmKfQ/viewform" target="_blank">apply to volunteer</a></p>
           </div>
         </div>
