adding marker to sponsors and removing useless images

--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
           <a href="https://www.ripio.com/" target="_blank" alt="Ripio" title="Ripio" id="sponsor-ripio">
             <img src="./images/sponsors/ripio.png" />
           </a>
-          <a href="https://www.xivis.com/" target="_blank" alt="Xivis" title="Xivis" id="sponsor-xivis">
-            <img src="./images/sponsors/Xivis.svg" />
+          <a href="https://makerdao.com/" target="_blank" alt="Marker" title="Marker" id="sponsor-marker">
+            <img src="./images/sponsors/marker.svg" />
           </a>
           <a href="https://lendroid.com" target="_blank" alt="lendroid" title="lendroid" id="sponsor-lendroid">
             <img src="./images/sponsors/lendroid.svg" />
