fix on sponsor name

--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
           <a href="https://www.ripio.com/" target="_blank" alt="Ripio" title="Ripio" id="sponsor-ripio">
             <img src="./images/sponsors/ripio.png" />
           </a>
-          <a href="https://makerdao.com/" target="_blank" alt="Marker" title="Marker" id="sponsor-marker">
-            <img src="./images/sponsors/marker.svg" />
+          <a href="https://makerdao.com/" target="_blank" alt="Maker" title="Maker" id="sponsor-maker">
+            <img src="./images/sponsors/maker.svg" />
           </a>
           <a href="https://lendroid.com" target="_blank" alt="lendroid" title="lendroid" id="sponsor-lendroid">
             <img src="./images/sponsors/lendroid.svg" />
