--- a/index.html
+++ b/index.html
@@ -201,6 +201,11 @@
             <p class="speakers-text">Joel Monegro</p>
             <p class="speakers-subtitle">Partner</br>Placeholder</p>
           </div>
+          <div class="speakers-box">
+            <img src="./images/speakers/chris_burniske.png" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Chris Burniske</p>
+            <p class="speakers-subtitle">Partner</br>Placeholder</p>
+          </div>
         </div>
       </div>
     </section>
