--- a/index.html
+++ b/index.html
@@ -206,6 +206,11 @@
             <p class="speakers-text">Chris Burniske</p>
             <p class="speakers-subtitle">Partner</br>Placeholder</p>
           </div>
+          <div class="speakers-box">
+            <img src="./images/speakers/oliver_headshot.png" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Oliver Nordbjerg</p>
+            <p class="speakers-subtitle">Developer Relations</br>Aragon</p>
+          </div>
         </div>
       </div>
     </section>
