--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           <div class="speakers-box">
             <img src="./images/speakers/lane_rettig.jpeg" class="circle responsive-img speakers-img">
             <p class="speakers-text">Lane Rettig</p>
-            <p class="speakers-subtitle">Ethereum Foundation</br></p>
+            <p class="speakers-subtitle">Core developer, eWASM</br></p>
           </div>
           <div class="speakers-box">
             <img src="./images/speakers/joel_monegro.jpg" class="circle responsive-img speakers-img">
