--- a/index.html
+++ b/index.html
@@ -281,6 +281,9 @@
           <a href="https://spankchain.com/" target="_blank" alt="spankchain" title="spankchain" id="sponsor-spankchain">
             <img src="./images/sponsors/spankchain.svg" />
           </a>
+          <a href="https://poex.io/" target="_blank" alt="poex" title="poex" id="sponsor-poex">
+            <img src="./images/sponsors/poex.svg" />
+          </a>
         </div>
         <h3>ETHBuenosAires sponsorship deadline is April 30th.</h3>
         <p>Qualified sponsorships receive 5-15% credit for bounties & repos.</p>
