--- a/index.html
+++ b/index.html
@@ -211,6 +211,11 @@
             <p class="speakers-text">Oliver Nordbjerg</p>
             <p class="speakers-subtitle">Developer Relations</br>Aragon</p>
           </div>
+          <div class="speakers-box">
+            <img src="./images/speakers/panashe_mahachi.jpg" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Panashe Mahachi</p>
+            <p class="speakers-subtitle">Co-founder</br>L4 & The Stable Fund</p>
+          </div>
         </div>
       </div>
     </section>
