--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
           <a alt="ETHCommons" title="ETHCommons" id="sponsor-ethcommons">
             <img src="./images/sponsors/ETHCommons.png" />
           </a>
-          <a href="https://www.ripio.com/" target="_blank" alt="Ripio" title="Ripio" id="sponsor-ripio">
-            <img src="./images/sponsors/ripio.png" />
+          <a href="https://ripiocredit.network/" target="_blank" alt="RCN" title="RCN" id="sponsor-ripio">
+            <img src="./images/sponsors/rcn.svg" />
           </a>
           <a href="https://makerdao.com/" target="_blank" alt="Maker" title="Maker" id="sponsor-maker">
             <img src="./images/sponsors/maker.svg" />
@@ -288,6 +288,15 @@
           </a>
           <a href="https://poex.io/" target="_blank" alt="poex" title="poex" id="sponsor-poex">
             <img src="./images/sponsors/poex.svg" />
+          </a>
+          <a href="https://www.maecenas.co/" target="_blank" alt="Maecenas" title="Maecenas" id="sponsor-maecenas">
+            <img src="./images/sponsors/maecenas.svg" />
+          </a>
+          <a href="https://thehydrofoundation.com/" target="_blank" alt="Hydro" title="Hydro" id="sponsor-hydro">
+            <img src="./images/sponsors/hydro.svg" />
+          </a>
+          <a href="https://www.acamica.com/" target="_blank" alt="Acamica" title="Acamica" id="sponsor-acamica">
+            <img src="./images/sponsors/acamica.svg" />
           </a>
         </div>
         <h3>ETHBuenosAires sponsorship deadline is April 30th.</h3>
