new media partners

--- a/index.html
+++ b/index.html
@@ -295,9 +295,6 @@
           <a href="https://thehydrofoundation.com/" target="_blank" alt="Hydro" title="Hydro" id="sponsor-hydro">
             <img src="./images/sponsors/hydro.svg" />
           </a>
-          <a href="https://www.acamica.com/" target="_blank" alt="Acamica" title="Acamica" id="sponsor-acamica">
-            <img src="./images/sponsors/acamica.svg" />
-          </a>
         </div>
         <h3>ETHBuenosAires sponsorship deadline is April 30th.</h3>
         <p>Qualified sponsorships receive 5-15% credit for bounties & repos.</p>
@@ -307,6 +304,19 @@
           <a alt="Cripto Noticias" title="CriptoNoticias" id="sponsor-criptonoticias" target="_blank" href="https://www.criptonoticias.com">
             <img src="./images/sponsors/Criptonoticias.png" />
           </a>
+          <a href="https://www.acamica.com/" target="_blank" alt="Acamica" title="Acamica" id="sponsor-acamica">
+            <img src="./images/sponsors/acamica.svg" />
+          </a>
+          <a href="https://livepeer.org/" target="_blank" alt="Livepeer" title="Livepeer" id="sponsor-livepeer">
+            <img src="./images/sponsors/livepeer.svg" />
+          </a>
+          <a href="https://district0x.io/" target="_blank" alt="District0x" title="District0x" id="sponsor-district0x">
+            <img src="./images/sponsors/district0x.svg" />
+          </a>
+          <a href="http://www.zeroknowledge.fm/" target="_blank" alt="Zk" title="Zk" id="sponsor-zk">
+            <img src="./images/sponsors/zk.svg" />
+          </a>
+          
         </div>
       </div>
     </section>
