new speakers and sposors

--- a/index.html
+++ b/index.html
@@ -216,6 +216,16 @@
             <p class="speakers-text">Panashe Mahachi</p>
             <p class="speakers-subtitle">Co-founder</br>L4 & The Stable Fund</p>
           </div>
+          <div class="speakers-box">
+            <img src="./images/speakers/agustin_aguilar.jpg" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Agustin Aguilar</p>
+            <p class="speakers-subtitle">Lead Developer</br>RCN</p>
+          </div>
+          <div class="speakers-box">
+            <img src="./images/speakers/mariano_conti.png" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Mariano Conti</p>
+            <p class="speakers-subtitle">Developer</br>Maker</p>
+          </div>
         </div>
       </div>
     </section>
@@ -297,6 +307,9 @@
           </a>
           <a href="https://district0x.io/" target="_blank" alt="District0x" title="District0x" id="sponsor-district0x">
             <img src="./images/sponsors/district0x.svg" />
+          </a>
+          <a href="https://www.ledger.fr/" target="_blank" alt="Ledger" title="Ledger" id="sponsor-ledger">
+            <img src="./images/sponsors/ledger.svg" />
           </a>
         </div>
         <h3>ETHBuenosAires sponsorship deadline is April 30th.</h3>
