--- a/index.html
+++ b/index.html
@@ -226,6 +226,11 @@
             <p class="speakers-text">Mariano Conti</p>
             <p class="speakers-subtitle">Developer</br>Maker</p>
           </div>
+          <div class="speakers-box">
+            <img src="./images/speakers/facundo_spagnuolo.png" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Facundo Spagnuolo</p>
+            <p class="speakers-subtitle">Core Developer</br>Zeppelin</p>
+          </div>
         </div>
       </div>
     </section>
