--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@
             <h5 class="valign">Part of the ETHGlobal community & first event in Latin America</h5>
             <h4>May 25 - 27, 2018 // Buenos Aires, Argentina</h4>
             <h4>Talks will be livestreamed and recorded – check back soon!</h4>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLScAqWVEPfK79NL9aHLowTZAxlGrZp-atPMK3EYtWGQRcwQ8xA/viewform?usp=sf_link" target="_blank"><button class="details">JOIN THE WAITLIST</button></a>
-            <p>or <a class="text-link" href="https://docs.google.com/forms/d/e/1FAIpQLSctgZDAWs3iRHwuKO82KSvslnz7wkkYltSnnZ9ty54QoVmKfQ/viewform" target="_blank">apply to volunteer</a></p>
+            <br/>
+            <h4>Registrations are now closed. If we confirmed you, see you soon! If you didn’t make it this time, don’t fret. We’ll host it again!</h4>
+            <p><a class="text-link" href="https://docs.google.com/forms/d/e/1FAIpQLSctgZDAWs3iRHwuKO82KSvslnz7wkkYltSnnZ9ty54QoVmKfQ/viewform" target="_blank">apply to volunteer</a></p>
           </div>
         </div>
       </section>
