--- a/index.html
+++ b/index.html
@@ -232,6 +232,11 @@
             <p class="speakers-text">Facundo Spagnuolo</p>
             <p class="speakers-subtitle">Core Developer</br>Zeppelin</p>
           </div>
+          <div class="speakers-box">
+            <img src="./images/speakers/joe_urgo.jpg" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Joe Urgo</p>
+            <p class="speakers-subtitle">Co-Founder & Operations Lead</br>District0x</p>
+          </div>
         </div>
       </div>
     </section>
@@ -359,7 +364,7 @@
     <section class="valign-wrapper" id="contact">
       <div class="valign">
         <div class="row">
-          <a class="social-media" target="_blank" href="https:/medium.com/@ethbuenosaires/">
+          <a class="social-media" target="_blank" href="https://medium.com/ethbuenosaires">
             <img src="./images/Medium.svg">
           </a>
           <a class="social-media" target="_blank" href="https://github.com/ethbuenosaires/">
