Update to close registrations

--- a/index.html
+++ b/index.html
@@ -87,9 +87,7 @@
             <img class="hide-on-med-and-up" src="./images/logo-mobile.svg"/> 
             <h5 class="valign">Part of the ETHGlobal community & first event in Latin America</h5>
             <h4>May 25 - 27, 2018 // Buenos Aires, Argentina</h4>
-            <h4>Talks will be livestreamed and recorded – check back soon!</h4>
-            <br/>
-            <h4>Registrations are now closed. If we confirmed you, see you soon! If you didn’t make it this time, don’t fret. We’ll host it again!</h4>
+            <h3>Registrations are now closed. If we confirmed you via email, see you soon! <br/>If you didn’t make it this time, you'll only be able to follow this event via livestream and recordings.</h3>
             <p><a class="text-link" href="https://docs.google.com/forms/d/e/1FAIpQLSctgZDAWs3iRHwuKO82KSvslnz7wkkYltSnnZ9ty54QoVmKfQ/viewform" target="_blank">apply to volunteer</a></p>
           </div>
         </div>
