--- a/schedule/index.html
+++ b/schedule/index.html
@@ -70,6 +70,7 @@
             <li><a class="menu-text" href="../#speakers-and-judges">SPEAKERS AND JUDGES</a></li>
             <li><a class="menu-text" href="../#sponsors">SPONSORS</a></li>
             <li><a class="menu-text" href="../#venue">VENUE</a></li>
+            <li><a class="menu-text" href="../schedule">SCHEDULE</a></li>
             <!-- <li><a class="menu-text" href="../#faq">FAQ</a></li> -->
           </ul>
           <ul class="side-nav" id="mobile-nav">
@@ -78,6 +79,7 @@
             <li class="valign-wrapper"><a class="menu-text sidenav-close" href="../#speakers-and-judges">SPEAKERS AND JUDGES</a></li>
             <li class="valign-wrapper"><a class="menu-text sidenav-close" href="../#sponsors">SPONSORS</a></li>
             <li class="valign-wrapper"><a class="menu-text sidenav-close" href="../#venue">VENUE</a></li>
+            <li class="valign-wrapper"><a class="menu-text sidenav-close" href="../schedule">SCHEDULE</a></li>
             <!-- <li class="valign-wrapper"><a class="menu-text sidenav-close" href="../#faq">FAQ</a></li> -->
           </ul>
         </div>
