change on speakers and adding a sponsor

--- a/index.html
+++ b/index.html
@@ -206,11 +206,6 @@
             <p class="speakers-subtitle">Partner</br>Placeholder</p>
           </div>
           <div class="speakers-box">
-            <img src="./images/speakers/oliver_headshot.png" class="circle responsive-img speakers-img">
-            <p class="speakers-text">Oliver Nordbjerg</p>
-            <p class="speakers-subtitle">Developer Relations</br>Aragon</p>
-          </div>
-          <div class="speakers-box">
             <img src="./images/speakers/panashe_mahachi.jpg" class="circle responsive-img speakers-img">
             <p class="speakers-text">Panashe Mahachi</p>
             <p class="speakers-subtitle">Co-founder</br>L4 & The Stable Fund</p>
@@ -234,6 +229,11 @@
             <img src="./images/speakers/joe_urgo.jpg" class="circle responsive-img speakers-img">
             <p class="speakers-text">Joe Urgo</p>
             <p class="speakers-subtitle">Co-Founder & Operations Lead</br>District0x</p>
+          </div>
+          <div class="speakers-box">
+            <img src="./images/speakers/fred_de_villamil.jpeg" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Fred De Villamil</p>
+            <p class="speakers-subtitle">VP Engineering</br>Ledger</p>
           </div>
         </div>
       </div>
@@ -320,6 +320,9 @@
           <a href="https://www.ledger.fr/" target="_blank" alt="Ledger" title="Ledger" id="sponsor-ledger">
             <img src="./images/sponsors/ledger.svg" />
           </a>
+          <a href="https://new.consensys.net/" target="_blank" alt="Consensys" title="Consensys" id="sponsor-consensys">
+            <img src="./images/sponsors/consensys.png" />
+          </a>
         </div>
         <h3>ETHBuenosAires sponsorship deadline is April 30th.</h3>
         <p>Qualified sponsorships receive 5-15% credit for bounties & repos.</p>
@@ -338,7 +341,6 @@
           <a href="http://www.zeroknowledge.fm/" target="_blank" alt="Zk" title="Zk" id="sponsor-zk">
             <img src="./images/sponsors/zk.svg" />
           </a>
-          
         </div>
       </div>
     </section>
