--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <li class="valign-wrapper"><a class="menu-text sidenav-close" href="#speakers-and-judges">SPEAKERS AND JUDGES</a></li>
             <li class="valign-wrapper"><a class="menu-text sidenav-close" href="#sponsors">SPONSORS</a></li>
             <li class="valign-wrapper"><a class="menu-text sidenav-close" href="#venue">VENUE</a></li>
-            <li class="valign-wrapper"><a class="menu-text sidenav-close" href="./schedule">SCHEDULE</a></li>
+            <li class="valign-wrapper"><a class="menu-text sidenav-close" href="/schedule/">SCHEDULE</a></li>
             <!-- <li class="valign-wrapper"><a class="menu-text sidenav-close" href="#faq">FAQ</a></li> -->
           </ul>
         </div>
