--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <li><a class="menu-text" href="#speakers-and-judges">SPEAKERS AND JUDGES</a></li>
             <li><a class="menu-text" href="#sponsors">SPONSORS</a></li>
             <li><a class="menu-text" href="#venue">VENUE</a></li>
-            <li><a class="menu-text" href="./schedule">SCHEDULE</a></li>
+            <li><a class="menu-text" href="/schedule/">SCHEDULE</a></li>
             <!-- <li><a class="menu-text" href="#faq">FAQ</a></li> -->
           </ul>
           <ul class="side-nav" id="mobile-nav">
