fix schdule on mobile devices

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -84,7 +84,7 @@
           </ul>
         </div>
       </nav>
-      <section>
+      <section id="schedule-home">
         <div class="row">
           <div class="col s12 offset-s0 m10 offset-m1 l8 offset-l2">
             <img class="hide-on-small-only logo" src="../images/logo.svg"/>
@@ -92,9 +92,19 @@
             <h2>SCHEDULE</h2>
           </div>
           <div class="tab-container">
-            <button id="friday-tab" class="active">FRIDAY 05/25</button>
-            <button id="saturday-tab">SATURDAY 05/26</button>
-            <button id="sunday-tab">SUNDAY 05/27</button>
+            <button id="friday-tab" class="active">
+              <span class="hide-on-small-only">FRIDAY 05/25</span>
+              <span class="hide-on-med-and-up">FRIDAY<br/>05/25</span>
+              </button>
+            <button id="saturday-tab">
+              <span class="hide-on-small-only">SATURDAY 05/26</span>
+              <span class="hide-on-med-and-up">SATURDAY<br/>05/26</span>
+               
+            </button>
+            <button id="sunday-tab">
+              <span class="hide-on-small-only">SUNDAY 05/27</span>
+              <span class="hide-on-med-and-up">SUNDAY<br/>05/27</span>
+            </button>
           </div>
         </div>
       </section>
