--- a/schedule/index.html
+++ b/schedule/index.html
@@ -296,7 +296,7 @@
               <h3>18:05 HS</h3>
             </div>
             <div class="body">
-              <p>Upgradeability using zOS</p>
+              <p>Getting started with ZeppelinOS</p>
               <p class="subtitle">Facundo Spagnuolo</p>
             </div>
           </div>
