--- a/schedule/index.html
+++ b/schedule/index.html
@@ -199,7 +199,7 @@
               <h3>12:10 HS</h3>
             </div>
             <div class="body">
-              <p>Boosting Blockchain Together</p>
+              <p>RCN: bridging different projects in Solidity.</p>
               <p class="subtitle">Agustin Aguilar</p>
             </div>
           </div>
