--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
             <h5 class="valign">Part of the ETHGlobal community & first event in Latin America</h5>
             <h4>May 25 - 27, 2018 // Buenos Aires, Argentina</h4>
             <h3>Registrations are now closed. If we confirmed you via email, see you soon! <br/>If you didn’t make it this time, you'll only be able to follow this event via livestream and recordings.</h3>
-            <p><a class="text-link" href="https://docs.google.com/forms/d/e/1FAIpQLSctgZDAWs3iRHwuKO82KSvslnz7wkkYltSnnZ9ty54QoVmKfQ/viewform" target="_blank">apply to volunteer</a></p>
           </div>
         </div>
       </section>
@@ -236,6 +235,11 @@
             <img src="./images/speakers/fred_de_villamil.jpeg" class="circle responsive-img speakers-img">
             <p class="speakers-text">Fred De Villamil</p>
             <p class="speakers-subtitle">VP Engineering</br>Ledger</p>
+          </div>
+          <div class="speakers-box">
+            <img src="./images/speakers/josh_rio.png" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Josh Rio</p>
+            <p class="speakers-subtitle">Lead Designer</br>DDex</p>
           </div>
         </div>
       </div>
