--- a/index.html
+++ b/index.html
@@ -241,6 +241,11 @@
             <p class="speakers-text">Josh Rio</p>
             <p class="speakers-subtitle">Lead Designer</br>DDex</p>
           </div>
+          <div class="speakers-box">
+            <img src="./images/speakers/yondon_fu.jpg" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Yondon Fu</p>
+            <p class="speakers-subtitle">Software Engineer </br>Livepeer</p>
+          </div>
         </div>
       </div>
     </section>
